improvement + global loader